src/test/ui/issues/issue-28848.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/issue-28848.rs:12:5
   |
LL |     Foo::<'a, 'b>::xmute(u) //~ ERROR lifetime bound not satisfied
   |     ^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime 'b as defined on the function body at 11:16
  --> $DIR/issue-28848.rs:11:16
   |
LL | pub fn foo<'a, 'b>(u: &'b ()) -> &'a () {
   |                ^^
note: but lifetime parameter must outlive the lifetime 'a as defined on the function body at 11:12
  --> $DIR/issue-28848.rs:11:12
   |
LL | pub fn foo<'a, 'b>(u: &'b ()) -> &'a () {
   |            ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
